[문의하기] id값 삭제, 관리자 댓글 수정

--- a/templates/inqdetail.html
+++ b/templates/inqdetail.html
@@ -22,9 +22,9 @@
 </div>
 <hr>
 {% for answer in inquiry.answer.all %}
+<h3><mark>관리자 답변</mark></h3>
 <p>{{answer.text}}</p>
 {% endfor %}
-
 
 </div>
 </div>
